<resources>
    <string name="app_name">ZoneApp</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome to ZONE</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_label">Sign In</string>
    <string name="forget_password_label">Forget Password</string>
    <string name="create_account_label">Create Account</string>
    <string name="welcome_user_label">Welcome Back ~ !</string>
    <string name="create_request_button_label">Create Zone</string>
    <string name="nearby_request_button_label">Find Zone</string>
    <string name="request_history_label">My Zone</string>
    <string name="edit_profile_button_label">Edit Profile</string>
    <string name="title_activity_create_request">CreateRequestActivity</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="update_username_label">Username</string>
    <string name="update_email_label">Email Address</string>
    <string name="update_password_label">Password</string>
    <string name="update_re_password_label">Re-Enter Password</string>
    <string name="submit_update_label">Update</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="find_password_label">Find Password</string>
    <string name="request_description_label">Zone Description</string>
    <string name="request_description_hint">Please type in a brief desciption of your request...</string>
    <string name="specify_location_Button">Specify Location</string>
    <string name="use_current_location_Button">Current Location</string>
    <string name="submit_request_label">Create Zone</string>
    <string name="title_activity_login">Zone</string>
    <string name="request_history">My Zones</string>
    <string name="requests_nearby">Zones Nearby</string>
    <string name="title_activity_request_history">RequestHistoryActivity</string>
    <string name="distance_text">Distance</string>
    <string name="request_time_text">When</string>
    <string name="request_location_text">where</string>
    <string name="request_content_text">What</string>
    <string name="title_activity_requests_nearby">RequestsNearby</string>
    <string name="submit_create_label">Create</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="google_map_api_key">AIzaSyAPobKzcvIf_CEyhRCJ7nLjvVDhju3hOE4</string>
    <string name="parse_application_id">66rVxQPiFnC8lHPJFLLblu39j8FMPJoObvIDX4NK</string>
    <string name="parse_client_key">8IJSi4eGd64aZ1o8cfPWUdMctRGlO7t55llxo1wU</string>
    <string name="hello_world">Hello world!</string>
    <string name="please_specify_your_location">Please specify your location</string>
    <string name="error_intro">Oops!</string>
    <string name="error_blank_username">Please enter a username!</string>
    <string name="error_join">\n</string>
    <string name="error_email">Invalid email format</string>
    <string name="error_blank_password">Please enter a password</string>
    <string name="error_mismatched_passwords">Passwords do not match</string>
    <string name="error_end">Please try again</string>
    <string name="progress_signup">Please wait</string>
    <string name="title_activity_dispatch_activiy">DispatchActiviy</string>
    <string name="progress_login">Please wait</string>
    <string name="duplicate_account">Username or email has already been taken...</string>
    <string name="location_specify">Please specify a location.</string>
    <string name="fetching_current_location">Fetching current location...</string>
    <string name="location_not_found">Location not found!</string>
    <string name="please_type_des">Please type in a brief description!</string>
    <string name="logout">logout</string>
    <string name="request_title_hint">Enter a brief title here</string>
    <string name="maxlength">Exceed maximal length!</string>
    <string name="loading">Loading information ...</string>
    <string name="cannot_load">Load information fail!</string>
    <string name="title_activity_request_detail">RequestDetailActivity</string>
    <string name="please_type_informtion">Information need!</string>
    <string name="show_map_label">Show location</string>
    <string name="google_map_marker_text">Use this as your request location</string>
    <string name="use_google_map_location_button_text">Use Location!</string>
    <string name="select_location_from_map_cancel_button_text">Cancel</string>
    <string name="title_activity_write_response">WriteResponseActivity</string>
    <string name="submit_label">Submit</string>
    <string name="write_your_response">Write your response</string>
    <string name="no_nearby_found">No nearby request found.</string>
    <string name="delete_label">Delete</string>
    <string name="title_activity_request_detail_map">RequestDetailMapActivity</string>
    <string name="refresh">refresh</string>
    <string name="private_message">PRIVATE ZONE</string>
    <string name="title_activity_private_message">PrivateMessageActivity</string>
    <string name="my_private_zone">My Private Zone</string>
    <string name="can_not_add_yourself">Can not add your self!</string>
    <string name="title_activity_private_chatting">PrivateChattingActivity</string>
    <string name="select_first">Please select a user to chat with first.</string>
    <string name="map_search_box_hint">input your location here</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="setting_option">settings</string>
    <string name="change_settings">Change Setting</string>
    <string name="change_radius">Change searching radius (mile)</string>
    <string name="set_email">Set email</string>
    <string name="set_email_to_this_user">Do you want to send email to this user?</string>
    <string name="action_bar_update_profile_text">Update Profile</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="list_chatting_here_is_time">here is time</string>
    <string name="list_private_message_time">time</string>
    <string name="list_history_item_time">time</string>
    <string name="activity_find_password_or">OR</string>
    <string name="list_chatting_text">test</string>
    <string name="content_request_detail_test">test</string>
    <string name="list_response_here_is_time">here is time</string>
    <string name="activity_private_message_chatting_with">Chatting with</string>
    <string name="list_history_item_title">title</string>
    <string name="list_response_test">test</string>
    <string name="welcome">Welcome to Zone!</string>
    <string name="please_refresh">Please click refresh to get a location first!</string>

</resources>
