<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/request_description_label"
        android:textStyle="bold"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/request_description_EditText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/request_description_hint"
        android:textStyle="italic"
        android:textSize="15sp"
        android:gravity="top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/find_location_on_google_map"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/specify_location_Button"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/use_current_location"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/use_current_location_Button"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_specify_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/location_specify"/>

    <Button
        android:id="@+id/create_request_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_request_label"/>



</LinearLayout>

