<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_main_page"
    >

    <TextView
        android:id="@+id/welcome_user_textView"
        android:text="@string/welcome_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/create_request_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textColor="#133553"
        android:text="@string/create_request_button_label"/>

    <Button
        android:id="@+id/nearby_request_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textColor="#133553"
        android:text="@string/nearby_request_button_label"/>

    <Button
        android:id="@+id/request_history_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textColor="#133553"
        android:text="@string/request_history_label"/>


    <!--


<Button
    android:id="@+id/edit_profile_Button"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:textStyle="bold"
    android:textColor="#133553"
    android:text="@string/edit_profile_button_label"/>
-->

<Button
    android:id="@+id/private_message_Button"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:textStyle="bold"
    android:textColor="#133553"
    android:text="@string/private_message"/>



<Button
    android:id="@+id/logout_Button"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textColor="#133553"
    android:text="@string/logout"/>



</LinearLayout>
