<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/secondary_background"
    >

    <EditText
        android:id="@+id/find_password_username_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="30dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_find_password_or"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/find_password_email_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_email_label"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="30dp"
        android:gravity="center" />

    <Button
        android:id="@+id/find_password_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_password_label"/>


</LinearLayout>