<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zone.zoneapp.Activity.MapActivity"
    android:orientation="vertical"
    android:background="@drawable/secondary_background"
    >
    <TextView
        android:text="@string/please_specify_your_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"/>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/map_search_box"
        android:hint="@string/map_search_box_hint"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/use_google_map_location_button"
            android:text="@string/use_google_map_location_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"/>
        <Button
            android:id="@+id/cancel_select_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location_from_map_cancel_button_text"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"/>
    </RelativeLayout>
    <fragment
        android:layout_width="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_height="wrap_content"
        android:id="@+id/map"/>
</LinearLayout>
