<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">


    <!--<TextView-->
        <!--android:id="@+id/user_name"-->
        <!--android:text="@string/update_username_label"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:textStyle="bold" />-->

    <EditText
        android:hint="@string/update_username_label"
        android:id="@+id/signup_username_EditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>


    <!--<TextView-->
        <!--android:text="@string/update_email_label"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:textStyle="bold" />-->

    <EditText
        android:hint="@string/update_email_label"
        android:id="@+id/signup_email_EditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>


    <!--<TextView-->
        <!--android:text="@string/update_password_label"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:textStyle="bold" />-->

    <EditText
        android:hint="@string/update_password_label"
        android:id="@+id/signup_password_EditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>


    <!--<TextView-->
        <!--android:text="@string/update_re_password_label"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:textStyle="bold" />-->

    <EditText
        android:hint="@string/update_re_password_label"
        android:id="@+id/signup_re_password_EditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>


    <Button
        android:id="@+id/signup_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_create_label"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>
