<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/secondary_background"
    android:gravity="center">

    <TextView
        android:text="@string/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#1c124e" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/zone_logo"
        android:layout_marginBottom="20dp"/>



    <EditText
        android:id="@+id/login_username_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/login_password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:inputType="textPassword"
        android:gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/sign_in_Button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/login_icon"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/forget_password_Button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/forget_icon"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/create_account_Button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/create_icon"
            android:layout_weight="1"/>

    </LinearLayout>


    <!--
    <Button
        android:id="@+id/sign_in_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#1b4d63"
        android:textColor="#FFFFFF"
        android:text="@string/sign_in_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/forget_password_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/forget_password_label"
            android:background="#1b4d63"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/create_account_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/create_account_label"
            android:textSize="10sp"
            android:background="#1b4d63"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>

    </LinearLayout>
-->



</LinearLayout>
